# namegraph

./: .gitignore  Dockerfile  app_rest.py  authorize-ecr.sh  collection_models.py  docker-compose-elasticsearch.yml  docker-compose.build.yml  docker-compose.yml  healthcheck.py  models.py  pyproject.toml  pytest.ini  readme.md  requirements.txt  setup.py  test-apply.html  test-with.html  test-without.html  test_generators.html  web_api.py  web_api_inspector.py
.github/workflows/: build.yml  ci.yml
conf/: config.yaml  full_config.yaml  prod_config.yaml  prod_config_new.yaml  test_config.yaml  test_config_new.yaml
conf/inspector/: prod.yaml
conf/pipelines/: full.yaml  prod.yaml  prod_new.yaml  simple.yaml  test.yaml  test_collections.yaml  test_combining.yaml  test_combining_new.yaml  test_emoji.yaml  test_flag_affix.yaml  test_grouped_fast.yaml  test_hyphen.yaml  test_new.yaml  test_substring.yaml
data/: advertised.csv  clubs.csv  country2langs.json  ens-emoji-freq.json  grapheme_confusables.json  leetspeak.json  name2emoji.json  name2symbol.json  person_name_affixes.json  person_name_emojify_affixes.json  person_name_expand_affixes.json  prefixes.txt  secondary.csv  subnames.txt  suffix2rhymes.json  suffixes.txt  w2v-dictionary.txt  words.txt
data/categories/: ignore.txt
docs/: old_readme.md
download/: download_emoji_freq.py  download_emojilib.py  readme.md
generator/: __init__.py  app.py  app_stdin.py  collection.py  collection_for_generator.py  collection_matcher.py  collections.py  do.py  domains.py  download.py  download_from_s3.py  download_names.py  generated_name.py  generator.py  input_name.py  meta_sampler.py  preprocessor.py  sampler.py  strategies.py  the_name.py  tokenizers.py  utils.py  xgenerator.py
inspector/: __init__.py  confusables.py  features.py  name_inspector.py  ngrams.py
myunicode/: __init__.py  blocks.py  data.py  download.py  emojis.py  myunicode.py  scripts.py  utils.py
name_graph/: __init__.py  app.py  domains.py  meta_sampler.py  preprocessor.py  xgenerator.py
namegraph/: __init__.py  app.py  domains.py  download_from_s3.py  download_names.py  meta_sampler.py  preprocessor.py  xgenerator.py
namehash_common/: generate_cache.py  ngrams2.py  paths.py  pickle_cache.py  utils.py
tests/: benchmark.py  download_numerics.py  helpers.py  manual_test_benchmark_sample.py  stress_test.py  test_app.py  test_categories_generator.py  test_collections_api.py  test_cst.py  test_domains.py  test_filters.py  test_generated_name.py  test_input_name.py  test_inspector.py  test_iterator.py  test_limiter.py  test_myunicode.py  test_name_generators.py  test_ngrams.py  test_normalization.py  test_person_name_affixes.py  test_person_names.py  test_pipeline.py  test_sorters.py  test_strategies.py  test_suffix_tree.py  test_thename.py  test_tokenizers.py  test_tokenizers_benchmark.py  test_unicode_wrap.py  test_urls.py  test_web_api.py  test_web_api_inspector.py  test_web_api_inspector_prod.py  test_web_api_per_pipeline.py  test_web_api_prod.py  utils.py
utils/: app.py  generator.py  generator_arg.py  generator_stdin.py
(+602 files in other folders)
