[tool.poetry]
name = "name-generator"
version = "0.0.1"
description = ""
authors = []
readme = "readme.md"
packages = [
    { include = "generator" }
]


[tool.poetry.dependencies]
python = "~3.10"
hydra-core = "~1"
nltk = "~3"
gensim = "~4"
wordninja = "~2"
unidecode = "~1"
fastapi = "~0"
uvicorn = "~0"
requests = "~2"
regex = "2022.10.31"
unicodeblock = "~0"
emoji = "~1"
pyahocorasick = "~1"
numpy = "~1"
more-itertools = "~9"
ens-normalize = "2.0.0"
elasticsearch = "8.6.2" # FIXME update version to the one used in AWS
python-dotenv = "~1"
boto3 = "~1"
csuffixtree = { url = "https://github.com/Carbon225/csuffixtree-py/releases/download/v0.3.7/csuffixtree-0.3.7-py3-none-any.whl" }


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-benchmark = "^4.0.0"
pytest-timeouts = "^1.2.1"
flake8 = "^6.0.0"
httpx = "~0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
