[tool.poetry]
name = "name-generator"
version = "0.0.1"
description = ""
authors = []
readme = "readme.md"
packages = [
    { include = "generator" }
]


[tool.poetry.dependencies]
python = "~3.10"
hydra-core = "^1.2.0"
nltk = "^3.6.7"
wordninja = "^2.0.0"
unidecode = "^1.3.4"
pydantic = "^2.0.3"
pydantic-settings = "^2.0.2"
fastapi = ">= 0.100.0, < 0.200"
uvicorn = ">= 0.23.0, < 1"
requests = "^2.27.1"
regex = "2023.10.3"
unicodeblock = ">= 0.3.1, < 1"
emoji = "^2.8.0"
pyahocorasick = "^1.4.4"
numpy = "^1.23.2"
more-itertools = "^9.0.0"
ens-normalize = "^3.0.7"
elasticsearch = "8.6.2" # FIXME update version to the one used in AWS
python-dotenv = "^1.0.0"
boto3 = "^1.26.117"
csuffixtree = { url = "https://github.com/Carbon225/csuffixtree-py/releases/download/v0.3.7/csuffixtree-0.3.7-py3-none-any.whl" }
rocksdict = "^0.3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-benchmark = "^4.0.0"
pytest-timeouts = "^1.2.1"
flake8 = "^6.0.0"
httpx = ">= 0.24.1, < 1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
